# 275Mini2

./: .gitignore  README.md
basecamp/: README.md  count.proto  rankfile
basecamp/client/: count_client.py  generate_pb.sh  requirements.txt  speed_test.py  unit_tests.py
basecamp/openMPI/: CMakeLists.txt  count.cpp
basecamp/proto_def/: count.proto
basecamp/server/: CMakeLists.txt  count.cpp  count_server.cpp  count_server_async.cpp  count_server_callback.cpp
src/: test_result.txt
src/client/: client.py  generate_pb.sh  requirements.txt
src/cpp_parser/: MotorRecordVector.h
src/proto_def/: csvquery.proto
src/server/: 10_worker  11_worker  12_worker  1_worker  2_worker  3_worker  4_worker  5_worker  6_worker  7_worker  8_worker  9_worker  CMakeLists.txt  csv_query_server.cpp  rankfile
src/server/cpp_parser/: MotorRecordVector.h  parser.cpp  parser.h  query
src/server/cpp_parser/src/: Reader.cpp  Reader.h  RecordVectors.cpp  RecordVectors.h
src/server/cpp_parser/test/: Query.cpp
